} <-- put this cunt in the naughty corner.

--- a/userChrome.css
+++ b/userChrome.css
@@ -278,7 +278,7 @@ toolbar .toolbarbutton-1 {
 #tabbrowser-tabbox, #sidebar {
   outline: transparent !important;
 }
-}
+/* } <======= Sit here a think about how you psised me off you little fucking cunt */
 
 /*==========================================================
 -----------| URL Bar improvements
