--- a/userChrome.css
+++ b/userChrome.css
@@ -52,7 +52,7 @@
   max-width: 150px !important;
 }
 
-#main-window:not([sizemode="fullscreen"]) { /* Prevents shitty spacing with fullscreen videos */
+#main-window:not([sizemode="fullscreen"]) { /* Prevents spacing with fullscreen videos */
   & #tabbrowser-tabbox{
     transform: translateY(-70px) !important;
     height: calc(100% + 63px) !important;
@@ -66,7 +66,7 @@
 
 #personal-bookmarks #PlacesToolbarItems {
   display: grid !important;
-  grid-template-columns: repeat(6,1fr)!important;
+  grid-template-columns: repeat(6,1fr)!important; /* Adjust the 6 to desired number of bookmarks per row */
 }
 
 #personal-bookmarks .bookmark-item {
@@ -278,7 +278,6 @@ toolbar .toolbarbutton-1 {
 #tabbrowser-tabbox, #sidebar {
   outline: transparent !important;
 }
-/* } <======= Sit here a think about how you psised me off you little fucking cunt */
 
 /*==========================================================
 -----------| URL Bar improvements
@@ -289,7 +288,7 @@ toolbar .toolbarbutton-1 {
   max-width: 32% !important; /* Do the calc when not lazy */
 }
 
-/* Nightly indicator in urlbar - why the fuck is this a thing */
+/* Nightly indicator in urlbar - why the fuck is this a thing Mozilla?*/
 #identity-icon-box {
   display: none;
 }
